--- a/themes/navy/languages/zh_CN.yml
+++ b/themes/navy/languages/zh_CN.yml
@@ -20,8 +20,7 @@ sidebar:
     overview: 概述
     introduction: 功能介绍
 
-    installation: 安装方法
-    install: 安装
+    install: 安装使用
 
     function: 功能模块
     basic_data_struct: 数据结构
